--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
     <h2>Text-to-Speech Generator</h2>
   
     <label for="voiceSelect">🎙 Select Voice</label>
-    <select id="voiceSelect">
-      <option value="NQzEPJuwG7meTvwoIjWt" selected>Mohammad Amir</option>
-      <option value="vGQNBgLaiM3EdZtxIiuY">Kawaii Aerisita</option>
-      <option value="1qEiC6qsybMkmnNdVMbK">Monika Sogam - Hindi Modulated</option>
-      <option value="EiNlNiXeDU1pqqOPrYMO">Amir</option>
-      <option value="Dnd9VXpAjEGXiRGBf1O6">Parker Springfield</option>
-      <option value="T7QGPtToiqH4S8VlIkMJ">Eleguar - Latin American</option>
-      <option value="84Fal4DSXWfp7nJ8emqQ">Motivational Coach - Leader</option>
-      <option value="tnSpp4vdxKPjI9w0GnoV">Hope - Upbeat and Clear</option>
-      <option value="EiNlNiXeDU1pqqOPrYMO">John Doe - Deep</option>
-    </select>
+<select id="voiceSelect">
+  <option value="NQzEPJuwG7meTvwoIjWt" selected>Mohammad Amir</option>
+  <option value="h8F2UnVJu4r9N6Ec8VQm">Imran Khan</option> 
+  <option value="vGQNBgLaiM3EdZtxIiuY">Kawaii Aerisita</option>
+  <option value="1qEiC6qsybMkmnNdVMbK">Monika Sogam - Hindi Modulated</option>
+  <option value="EiNlNiXeDU1pqqOPrYMO">Amir</option>
+  <option value="Dnd9VXpAjEGXiRGBf1O6">Parker Springfield</option>
+  <option value="T7QGPtToiqH4S8VlIkMJ">Eleguar - Latin American</option>
+  <option value="84Fal4DSXWfp7nJ8emqQ">Motivational Coach - Leader</option>
+  <option value="tnSpp4vdxKPjI9w0GnoV">Hope - Upbeat and Clear</option>
+  <option value="EiNlNiXeDU1pqqOPrYMO">John Doe - Deep</option>
+</select>
+
   
     <label for="stability">🎚 Stability: <span id="stabilityValue">0.5</span></label>
     <input type="range" id="stability" min="0" max="1" step="0.01" value="0.5" />
