--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
     <label for="voiceSelect">🎙 Select Voice</label>
     <select id="voiceSelect">
       <option value="NQzEPJuwG7meTvwoIjWt" selected>Mohammad Amir</option>
+        <option value="kLuXkg0zRFuSas1JFmMT">Sohaib Jasra</option>
+   <option value="kPzsL2i3teMYv0FxEYQ6">Brittney - Social Media Voice</option>
+   <option value="9F4C8ztpNUmXkdDDbz3J">Dan Dan</option>
+   <option value="9F4C8ztpNUmXkdDDbz3J">Oxley - Evil Character</option>
+   <option value="vGQNBgLaiM3EdZtxIiuY">Kawaii Aerisita</option>
+   <option value="UgBBYS2sOqTuMpoF3BR0">Mark - Natural Conversations</option>
+   <option value="fCxG8OHm4STbIsWe4aT9">Harrison Gale – The Velvet Voice</option>
+   <option value="Gv42yFG3G6CHLsU5y8g6">Lucy - Upbeat Girl</option>
+   <option value="Gv42yFG3G6CHLsU5y8g6">W. Darth Oxley</option>
+   <option value="KKOYIrvUAjNXYCKUyxhh">Anon - Witness Protection</option>
+   <option value="pVnrL6sighQX7hVz89cp">Soothing Narrator</option>
+   <option value="NOpBlnGInO9m6vDvFkFC">Grandpa Spuds Oxley</option>
+      <option value="84Fal4DSXWfp7nJ8emqQ">Motivational Coach - Leader</option>
       <option value="vGQNBgLaiM3EdZtxIiuY">Kawaii Aerisita</option>
       <option value="1qEiC6qsybMkmnNdVMbK">Monika Sogam - Hindi Modulated</option>
       <option value="EiNlNiXeDU1pqqOPrYMO">Amir</option>
