--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <label for="voiceSelect">🎙 Select Voice</label>
     <select id="voiceSelect">
-      <option value="NQzEPJuwG7meTvwoIjWt" selected>Mohammad Amir</option>
+      <option value="56AoDkrOh6qfVPDXZ7Pt" selected> Classdy</option>
         <option value="kLuXkg0zRFuSas1JFmMT">Sohaib Jasra</option>
    <option value="kPzsL2i3teMYv0FxEYQ6">Brittney - Social Media Voice</option>
    <option value="9F4C8ztpNUmXkdDDbz3J">Dan Dan</option>
