--- a/index.html
+++ b/index.html
@@ -14,28 +14,9 @@
 
     <label for="voiceSelect">🎙 Select Voice</label>
     <select id="voiceSelect">
-      <option value="56AoDkrOh6qfVPDXZ7Pt" selected> Classdy</option>
-        <option value="kLuXkg0zRFuSas1JFmMT">Sohaib Jasra</option>
-   <option value="kPzsL2i3teMYv0FxEYQ6">Brittney - Social Media Voice</option>
-   <option value="9F4C8ztpNUmXkdDDbz3J">Dan Dan</option>
-   <option value="9F4C8ztpNUmXkdDDbz3J">Oxley - Evil Character</option>
-   <option value="vGQNBgLaiM3EdZtxIiuY">Kawaii Aerisita</option>
-   <option value="UgBBYS2sOqTuMpoF3BR0">Mark - Natural Conversations</option>
-   <option value="fCxG8OHm4STbIsWe4aT9">Harrison Gale – The Velvet Voice</option>
-   <option value="Gv42yFG3G6CHLsU5y8g6">Lucy - Upbeat Girl</option>
-   <option value="Gv42yFG3G6CHLsU5y8g6">W. Darth Oxley</option>
-   <option value="KKOYIrvUAjNXYCKUyxhh">Anon - Witness Protection</option>
-   <option value="pVnrL6sighQX7hVz89cp">Soothing Narrator</option>
-   <option value="NOpBlnGInO9m6vDvFkFC">Grandpa Spuds Oxley</option>
-      <option value="84Fal4DSXWfp7nJ8emqQ">Motivational Coach - Leader</option>
-      <option value="vGQNBgLaiM3EdZtxIiuY">Kawaii Aerisita</option>
-      <option value="1qEiC6qsybMkmnNdVMbK">Monika Sogam - Hindi Modulated</option>
-      <option value="EiNlNiXeDU1pqqOPrYMO">Amir</option>
-      <option value="Dnd9VXpAjEGXiRGBf1O6">Parker Springfield</option>
-      <option value="T7QGPtToiqH4S8VlIkMJ">Eleguar - Latin American</option>
-      <option value="84Fal4DSXWfp7nJ8emqQ">Motivational Coach - Leader</option>
-      <option value="tnSpp4vdxKPjI9w0GnoV">Hope - Upbeat and Clear</option>
-      <option value="EiNlNiXeDU1pqqOPrYMO">John Doe - Deep</option>
+      <option value="UgBBYS2sOqTuMpoF3BR0" selected> Mark - Natural Conversations</option>
+       <option value="BognUUMX6W1qmZKB2TOw" selected> Adrian Mohammadi</option>
+<option value="56AoDkrOh6qfVPDXZ7Pt" selected> Cassidy</option>   
     </select>
 
     <label for="stability">🎚 Stability: <span id="stabilityValue">0.5</span></label>
